--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - pip install --upgrade python-magic
   - travis_install_nightly
-  - sed  -i  "s/'installable': True/'installable': False/" l10n_py_vat_book/__manifest__.py
+  - travis_disable_module l10n_py_vat_book
 
 script:
   - travis_run_tests
